[gd_scene load_steps=4 format=3 uid="uid://kwnljmonh5y0"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_mel0d"]
[ext_resource type="Texture2D" uid="uid://b8k7m0ni77wdj" path="res://gem/gem-1.png" id="2_tgwwq"]
[ext_resource type="PackedScene" uid="uid://c2dkukuacm4c7" path="res://gem/gem.tscn" id="3_iamnu"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mel0d")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.134062
anchor_right = 0.0413403
anchor_bottom = 0.134062
offset_left = 59.376
offset_top = -31.872
offset_right = 99.376
offset_bottom = 8.12801
texture = ExtResource("2_tgwwq")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.363445
anchor_top = -0.1
anchor_right = -0.363445
anchor_bottom = -0.1
offset_left = 69.355
offset_right = 92.355
offset_bottom = 58.0
theme_override_font_sizes/font_size = 30
text = "0/40"
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.475
anchor_right = 0.51
anchor_bottom = 0.475
offset_left = -157.52
offset_top = -161.8
offset_right = 156.48
offset_bottom = 176.2
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.262745, 0.262745, 0.85098)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.278
anchor_right = 0.495
anchor_bottom = 0.278
offset_left = -157.43
offset_top = -0.963997
offset_right = 157.57
offset_bottom = 190.036

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
text = "Resume"

[node name="HBoxContainer2" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Restart" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
text = "Play Again
"

[node name="HBoxContainer3" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Quit" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
text = "Quit
"

[node name="WinMenu" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.511
anchor_top = 0.239
anchor_right = 0.511
anchor_bottom = 0.239
offset_left = -150.672
offset_top = 0.127991
offset_right = 151.328
offset_bottom = 329.128
grow_horizontal = 2
color = Color(0.2, 0.2, 0.2, 0.882353)

[node name="Label2" type="Label" parent="WinMenu"]
layout_mode = 0
offset_left = 66.0
offset_top = 121.0
offset_right = 170.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 30
text = "Score : "

[node name="Label" type="Label" parent="WinMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.382
anchor_right = 0.506
anchor_bottom = 0.382
offset_left = 38.188
offset_top = -1.67801
offset_right = 102.188
offset_bottom = 52.322
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Restart" type="Button" parent="WinMenu"]
layout_mode = 0
offset_left = 41.0
offset_top = 218.0
offset_right = 141.0
offset_bottom = 263.0
text = "Try Again"

[node name="Quit" type="Button" parent="WinMenu"]
layout_mode = 0
offset_left = 169.0
offset_top = 217.0
offset_right = 268.0
offset_bottom = 262.0
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="WinMenu"]
position = Vector2(146, 91)
scale = Vector2(4.53333, 4.52884)
texture = ExtResource("2_tgwwq")

[node name="Label3" type="Label" parent="WinMenu"]
layout_mode = 0
offset_left = 75.0
offset_top = 13.0
offset_right = 226.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 28
text = "Game Over"

[node name="FinalMenu" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.476
anchor_right = 0.485
anchor_bottom = 0.476
offset_left = -118.72
offset_top = -119.448
offset_right = 118.28
offset_bottom = 119.552
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="Label" type="Label" parent="FinalMenu"]
layout_mode = 0
offset_left = 48.0
offset_top = 14.0
offset_right = 183.0
offset_bottom = 66.0
text = "Congratulations 
      You Won !!"

[node name="Gem" parent="FinalMenu" instance=ExtResource("3_iamnu")]
position = Vector2(112, 87)

[node name="Score" type="Label" parent="FinalMenu"]
layout_mode = 0
offset_left = 58.0
offset_top = 122.0
offset_right = 98.0
offset_bottom = 145.0
text = "Score :"

[node name="Label2" type="Label" parent="FinalMenu"]
layout_mode = 0
offset_left = 121.0
offset_top = 124.0
offset_right = 161.0
offset_bottom = 147.0

[node name="Restart" type="Button" parent="FinalMenu"]
layout_mode = 0
offset_left = 24.0
offset_top = 172.0
offset_right = 112.0
offset_bottom = 203.0
text = "Try Again"

[node name="Quit" type="Button" parent="FinalMenu"]
layout_mode = 0
offset_left = 129.0
offset_top = 173.0
offset_right = 216.0
offset_bottom = 204.0
text = "Quit"

[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer2/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer3/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="WinMenu/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="WinMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="FinalMenu/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="FinalMenu/Quit" to="." method="_on_quit_pressed"]
